# hm-two-tower-recsys

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF_TO_SPECIALIST.md  Makefile  README.md  SECURITY.md  opencode.json  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codeql.yml  (+6 more)
.opencode/: README.md
docs/: api.rst  architecture.md  conf.py  dependency-management.md  index.rst  methodology.md  multimodal-two-tower-architecture.md  requirements.txt  spec-driven-development.md
scripts/: ablate_two_tower_score.py  augment_candidates_with_content_retrieval.py  debug_deterministic_baseline.py  eval_catboost_yetirank.py  eval_lgbm_bagged.py  eval_lgbm_catboost_ensemble.py  generate_content_similarity_submission.py  rrf_blend_submissions.py  score_content_similarity_candidates.py  train_item2vec_embeddings.py
tests/: test_ablation.py  test_article_content.py  test_baseline.py  test_baseline_champion.py  test_behavioral_ranker_features.py  test_candidate_diagnostics.py  test_candidate_export.py  test_cli_contract.py  test_co_visitation.py  test_content_retrieval_augmentation.py  test_content_similarity.py  test_content_similarity_diagnostics.py  test_data_contract.py  test_deterministic_ranker.py  test_deterministic_submission.py  test_deterministic_tuning.py  test_eda_report.py  test_embedding_cache_io.py  test_embedding_cache_manifest.py  test_embedding_generation.py  test_embedding_indexing_contracts.py  test_ensemble_and_mmr.py  test_exact_index.py  test_image_inventory.py  test_lightgbm_behavioral_ranker.py  test_linear_ranker.py  test_linear_submission.py  test_marqo_fashion_siglip.py  test_metadata_affinity.py  test_metrics.py  test_paths.py  test_perfect_ranker_ceiling.py  test_ranker_protocol.py  test_rolling_ranker.py  test_safe_io.py  test_seasonality.py  test_segment_popularity.py  test_short_term_popularity_emission.py  test_submission.py  test_temporal.py  (+6 more)
(+110 files in other folders)
