[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "hm-two-tower-recsys"
version = "0.1.0"
description = "Spec-driven H&M personalized fashion recommendation pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
docs = [
    "myst-parser==4.0.1",
    "sphinx==8.2.3",
]

[project.scripts]
hm-recsys = "hm_recsys.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hm_recsys = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
py_version = 311
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "artifacts",
    "data",
    "env",
    "models",
    "outputs",
    "submissions",
    "venv",
]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "DTZ",
    "E",
    "F",
    "I",
    "N",
    "PIE",
    "PT",
    "RUF",
    "SIM",
    "UP",
    "W",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = "^(data|artifacts|models|outputs|submissions|venv|env|\\.venv)/"

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
    "internal: long-running checks that are not part of default CI",
]

[tool.coverage.run]
branch = true
source = ["hm_recsys"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = [
    ".git",
    ".venv",
    "artifacts",
    "data",
    "env",
    "models",
    "outputs",
    "submissions",
    "venv",
]
